- add icon to services - add lat/lng and services to providers
